GCA-167 fix swagger issues
